<?xml version="1.0"?>
<package format="3">
  <name>ros_plugin</name>
  <version>0.0.1</version>
  <description>ROS 2 Plugin for Atta</description>
  <maintainer email="ahmed.nazar@rocketmail.com">Ahmed Nazar</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
