<?xml version="1.0"?>
<package format="3">
  <name>ros_plugin</name>
  <version>0.0.1</version>
  <description>ROS 2 Plugin for Atta</description>
  <maintainer email="ahmed.nazar@rocketmail.com">Ahmed Nazar</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosgraph_msgs</depend>
  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--Custom Build tools -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
